--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,11 +1,7 @@
 name: Check EKS Updates
 
 on:
-  push:
-    branches:
-      - master
-  schedule:
-    - cron: '0 0 * * *'
+  workflow_dispatch:
 
 env:
     CURRENT_VERSION: 1.29
